# ikuzo-examples

./: .gitignore  README.md  TODO.md
.github/: FUNDING.yml
psn00b/benchmarks/quads_vs_tris/: CMakeLists.txt  cubes.h  display.h  main.c
psn00b/benchmarks/texture_distortion/: CMakeLists.txt  CMakePresets.json  checker.tim  fence.tim  main.c  planes.h  run.fish  wall.tim
psn00b/examples/cd_load/: CMakeLists.txt  iso.xml  main.c  system.cnf
psn00b/examples/fps_independent_movement/: CMakeLists.txt  display.h  main.c  run.fish  tile.h  timer.h
psn00b/examples/load_from_cd/: CMakeLists.txt  CMakePresets.json  iso.xml  main.c
psn00b/examples/model_loading/: CMakeLists.txt  CMakePresets.json  main.c  md2.c  md2.h  mummy.h  mummy.tim  test  test.c
psn00b/include/: controller.h  display.h  fixed_point.h
